# fantasy_gbbo

./: README.md  pyproject.toml
app/: app.py  database.py
app/classes/: league.py
docs/: initial_spec.md
