[tool.poetry]
name = "fantasy-gbbo"
version = "0.1.0"
description = ""
authors = ["Joe Gray <joegray122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
